--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -3,75 +3,56 @@
     <string name="permission_group_description">使用 Shizuku</string>
     <string name="permission_label">以更高許可權使用系統 API</string>
     <string name="permission_description">允許應用程式以更高許可權使用系統 API。</string>
-    <string name="service_name">服務</string>
-    <string name="service_running">%1$s正在執行</string>
-    <string name="service_version">版本 %2$d，%1$s</string>
-    <string name="service_version_update">版本 %2$d，%1$s\n再次啟動來升級到版本 %3$d</string>
-    <string name="service_not_running">%1$s沒有執行</string>
-    <string name="service_not_running_tap_retry">%1$s沒有執行</string>
-    <string name="service_start">啟動</string>
-    <string name="service_restart">重新啟動</string>
-    <string name="start_service_title_root"><![CDATA[通過 root 啟動服務]]></string>
-    <string name="start_service_title_adb"><![CDATA[通過 adb 啟動或升級服務]]></string>
-    <string name="start_service_summary_adb"><![CDATA[
-    <b>如果您的裝置沒有 root，您需要藉助 adb 啟動服務。</b>
-    <p><b>如何使用 adb？</b>
-    <br>使用 adb 並不困難，請閱讀幫助。
-    <p><b>Shizuku 隨機停止？</b>
-    <br>請閱讀幫助的最後一部分。]]></string>
-    <string name="start_service_summary_root"><![CDATA[
-    <b>如果您的裝置已經 root，您可以使用此方式。</b>
-    <p><b>無法開機啟動？</b>
-    <br>請檢查您的系統或是第三方工具是否限制了 Shizuku。
-    <br>你可以參考 <b><a href="https://dontkillmyapp.com/">Don\'t kill my app!</a></b>。]]></string>
-    <string name="copy_command">複製</string>
-    <string name="send_command">傳送</string>
-    <string name="view_command">檢視 adb 指令</string>
-    <string name="view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* 還有一些其他注意事項，請確認你已閱讀幫助。]]></string>
-    <string name="auth_allow">一律允許</string>
-    <string name="auth_deny">拒絕</string>
-    <string name="auth_message"><![CDATA[要允許 <b>%1$s</b> 以 <b>%2$s</b> 身份調用 API 嗎？]]></string>
-    <string name="auth_cannot_connect">無法連線至核心服務，請確認其正在執行。</string>
-    <string name="auth_legacy_not_support_title">%1$s 不支援現代 Shizuku</string>
-    <string name="auth_legacy_not_support_message"><![CDATA[
-    舊式 Shizuku 已於 2019 年 3 月被棄用。此外，舊式 Shizuku 無法在較新版本的 Android 系統上工作。<p>請要求 <b>%1$s</b> 的開發者進行更新。
-    ]]></string>
-    <string name="auth_requesting_legacy_title">%1$s 正在請求舊式 Shizuku</string>
-    <string name="auth_requesting_legacy_message"><![CDATA[
-    <b>%1$s</b> 支援現代 Shizuku，但它正在請求舊式 Shizuku。這可能是因為 Shizuku 沒有執行，請在 Shizuku 程式內檢查。<p>舊式 Shizuku 已於 2019 年 3 月被棄用。
-    ]]></string>
-    <string name="authorized_apps_manage">應用程式管理</string>
-    <plurals name="authorized_apps_count">
+    <string name="home_status_service_is_running">%1$s正在執行</string>
+    <string name="home_status_service_version">版本 %2$d，%1$s</string>
+    <string name="home_status_service_version_update">版本 %2$d，%1$s\n再次啟動來升級到版本 %3$d</string>
+    <string name="home_status_service_not_running">%1$s沒有執行</string>
+    <string name="home_root_button_start">啟動</string>
+    <string name="home_root_button_restart">重新啟動</string>
+    <string name="home_root_title"><![CDATA[通過 root 啟動服務]]></string>
+    <string name="home_adb_title"><![CDATA[通過 adb 啟動或升級服務]]></string>
+    <string name="home_adb_description"><![CDATA[<b>如果您的裝置沒有 root，您需要藉助 adb 啟動服務。</b><p><b>如何使用 adb？</b><br>使用 adb 並不困難，請閱讀幫助。<p><b>Shizuku 隨機停止？</b><br>請閱讀幫助的最後一部分。]]></string>
+    <string name="home_root_description"><![CDATA[<b>如果您的裝置已經 root，您可以使用此方式。</b><p><b>無法開機啟動？</b><br>請檢查您的系統或是第三方工具是否限制了 Shizuku。<br>你可以參考 %s。]]></string>
+    <string name="home_adb_dialog_view_command_copy_button">複製</string>
+    <string name="home_adb_dialog_view_command_button_send">傳送</string>
+    <string name="home_adb_button_view_command">檢視 adb 指令</string>
+    <string name="home_adb_dialog_view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* 還有一些其他注意事項，請確認你已閱讀幫助。]]></string>
+    <string name="dialog_legacy_not_support_title">%1$s 不支援現代 Shizuku</string>
+    <string name="dialog_legacy_not_support_message"><![CDATA[舊式 Shizuku 已於 2019 年 3 月被棄用。此外，舊式 Shizuku 無法在較新版本的 Android 系統上工作。<p>請要求 <b>%1$s</b> 的開發者進行更新。]]></string>
+    <string name="dialog_requesting_legacy_title">%1$s 正在請求舊式 Shizuku</string>
+    <string name="dialog_requesting_legacy_message"><![CDATA[<b>%1$s</b> 支援現代 Shizuku，但它正在請求舊式 Shizuku。這可能是因為 Shizuku 沒有執行，請在 Shizuku 程式內檢查。<p>舊式 Shizuku 已於 2019 年 3 月被棄用。]]></string>
+    <string name="home_app_management_title">應用程式管理</string>
+    <plurals name="home_app_management_authorized_apps_count">
         <item quantity="other"><![CDATA[已授權 %d 個程式]]></item>
     </plurals>
-    <string name="view_authorized_apps"><![CDATA[輕觸管理授權的程式]]></string>
-    <string name="copied_to_clipboard">%s\n已被複製到剪貼簿。</string>
-    <string name="open_manager">開啟 Shizuku</string>
+    <string name="home_app_management_view_authorized_apps"><![CDATA[輕觸管理授權的程式]]></string>
+    <string name="toast_copied_to_clipboard">%s\n已被複製到剪貼簿。</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">開啟 Shizuku</string>
     <string name="action_about">關於</string>
-    <string name="about_icon_credits"><![CDATA[感謝 <a href="https://twitter.com/xiaoya_er">小雅</a> 製作應用程式的圖示]]></string>
-    <string name="about_source_code"><![CDATA[在 <b><a href="https://github.com/RikkaApps/Shizuku">GitHub</a></b> 查看原始碼]]></string>
-    <string name="action_settings">設定</string>
-    <string name="cannot_start_no_root">未授予 root 權限或是該裝置沒有 root，因此無法啟動服務。</string>
-    <string name="channel_service_status">服務啟動狀態</string>
+    <string name="about_icon_credits"><![CDATA[感謝 %s 製作應用程式的圖示]]></string>
+    <string name="about_view_source_code"><![CDATA[在 %s 查看原始碼]]></string>
+    <string name="settings_title">設定</string>
+    <string name="start_with_root_failed">未授予 root 權限或是該裝置沒有 root，因此無法啟動服務。</string>
+    <string name="notification_channel_service_status">服務啟動狀態</string>
     <string name="notification_service_starting">Shizuku 服務正在啟動…</string>
     <string name="notification_service_start_failed">啟動 Shizuku 服務時失敗。</string>
     <string name="notification_service_start_no_root">請求 root 權限失敗。</string>
     <string name="notification_working">工作中…</string>
     <string name="settings_language">語言</string>
     <string name="settings_user_interface">界面外觀</string>
-    <string name="black_night_theme">黑色夜間主題</string>
-    <string name="black_night_theme_summary">當夜間模式啟用時使用純黑色主題</string>
+    <string name="settings_black_night_theme">黑色夜間主題</string>
+    <string name="settings_black_night_theme_summary">當夜間模式啟用時使用純黑色主題</string>
     <string name="settings_startup">啟動</string>
-    <string name="action_view_apps">取得更多</string>
-    <string name="adb_no_permission_title">adb 權限受限</string>
-    <string name="adb_no_permission_message"><![CDATA[這通常是由您的裝置供應商完成，我們無法解決。<br>請嘗試在「開發者選項」中查詢相關選項。例如，在 MIUI 中，選項是「USB 除錯（安全設定）」。]]></string>
-    <string name="view_online_help">閱讀幫助</string>
+    <string name="app_management_menu_get_more">取得更多</string>
+    <string name="app_management_dialog_adb_is_limited_title">adb 權限受限</string>
+    <string name="app_management_dialog_adb_is_limited_message"><![CDATA[這通常是由您的裝置供應商完成，我們無法解決。<br>請嘗試在「開發者選項」中查詢相關選項。例如，在 MIUI 中，選項是「USB 除錯（安全設定）」。]]></string>
+    <string name="home_adb_button_view_help">閱讀幫助</string>
     <string name="dialog_cannot_open_browser_title">無法啟動瀏覽器</string>
     <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被複制到剪貼簿。]]></string>
-    <string name="learn_more">瞭解 Shizuku</string>
-    <string name="learn_more_summary">瞭解如何使用 Shizuku 開發或檢視使用 Shizuku 的程式</string>
-    <string name="keep_su_context">使用完整 root（如果可用）</string>
-    <string name="keep_su_context_summary">關閉此選項（或你的 su 不支援時）會使用 adb shell 的 secontext</string>
-    <string name="requires_root">* 需要以 root 執行的 Shizuku</string>
+    <string name="home_learn_more_title">瞭解 Shizuku</string>
+    <string name="home_learn_more_description">瞭解如何使用 Shizuku 開發或檢視使用 Shizuku 的程式</string>
+    <string name="settings_prefer_su_context">使用完整 root（如果可用）</string>
+    <string name="settings_prefer_su_context_summary">關閉此選項（或你的 su 不支援時）會使用 adb shell 的 secontext</string>
+    <string name="app_management_item_summary_requires_root">* 需要以 root 執行的 Shizuku</string>
 
 </resources>
