--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -3,10 +3,10 @@
     <string name="permission_group_description">使用 Shizuku</string>
     <string name="permission_label">以更高权限使用系统 API</string>
     <string name="permission_description">允许应用以更高权限使用系统 API。</string>
-    <string name="home_status_service_is_running">%1$s正在运行</string>
+    <string name="home_status_service_is_running">%1$s 正在运行</string>
     <string name="home_status_service_version">版本 %2$d，%1$s</string>
     <string name="home_status_service_version_update">版本 %2$d，%1$s\n再次启动来升级到版本 %3$d</string>
-    <string name="home_status_service_not_running">%1$s没有运行</string>
+    <string name="home_status_service_not_running">%1$s 没有运行</string>
     <string name="home_root_button_start">启动</string>
     <string name="home_root_button_restart">重新启动</string>
     <string name="home_root_title"><![CDATA[通过 root 启动服务]]></string>
@@ -54,4 +54,8 @@
     <string name="settings_prefer_su_context">使用完整 root（如果可用）</string>
     <string name="settings_prefer_su_context_summary">关闭此选项（或你的 su 不支持时）会使用 adb shell 的 secontext</string>
     <string name="app_management_item_summary_requires_root">* 需要以 root 执行的 Shizuku</string>
+    <string name="settings_translation_contributors">翻译贡献者</string>
+    <string name="translation_contributors" />
+    <string name="settings_translation">翻译</string>
+    <string name="settings_translation_summary">帮助我们将 %s 翻译至您的语言</string>
 </resources>
