--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -3,10 +3,10 @@
     <string name="permission_group_description">使用 Shizuku</string>
     <string name="permission_label">以更高許可權使用系統 API</string>
     <string name="permission_description">允許應用程式以更高許可權使用系統 API。</string>
-    <string name="home_status_service_is_running">%1$s正在執行</string>
+    <string name="home_status_service_is_running">%1$s 正在執行</string>
     <string name="home_status_service_version">版本 %2$d，%1$s</string>
     <string name="home_status_service_version_update">版本 %2$d，%1$s\n再次啟動來升級到版本 %3$d</string>
-    <string name="home_status_service_not_running">%1$s沒有執行</string>
+    <string name="home_status_service_not_running">%1$s 沒有執行</string>
     <string name="home_root_button_start">啟動</string>
     <string name="home_root_button_restart">重新啟動</string>
     <string name="home_root_title"><![CDATA[通過 root 啟動服務]]></string>
@@ -54,5 +54,9 @@
     <string name="settings_prefer_su_context">使用完整 root（如果可用）</string>
     <string name="settings_prefer_su_context_summary">關閉此選項（或你的 su 不支援時）會使用 adb shell 的 secontext</string>
     <string name="app_management_item_summary_requires_root">* 需要以 root 執行的 Shizuku</string>
+    <string name="settings_translation_contributors">翻譯貢獻者</string>
+    <string name="translation_contributors" />
+    <string name="settings_translation">翻譯</string>
+    <string name="settings_translation_summary">幫助我們將 %s 翻譯至您的語言</string>
 
 </resources>
