--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -56,7 +56,7 @@
     <string name="app_management_item_summary_requires_root">* 需要以 root 執行的 Shizuku</string>
     <string name="settings_translation_contributors">翻譯貢獻者</string>
     <string name="translation_contributors" />
-    <string name="settings_translation">翻譯</string>
+    <string name="settings_translation">參與翻譯</string>
     <string name="settings_translation_summary">幫助我們將 %s 翻譯至您的語言</string>
 
 </resources>
