--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
     <string name="permission_description">允许应用以更高权限使用系统 API。</string>
     <string name="home_status_service_is_running">%1$s 正在运行</string>
     <string name="home_status_service_version">版本 %2$d，%1$s</string>
-    <string name="home_status_service_version_update">版本 %2$d，%1$s\n再次启动来升级到版本 %3$d</string>
+    <string name="home_status_service_version_update"><![CDATA[版本 %2$d，%1$s<br>再次启动来升级到版本 %3$d]]></string>
     <string name="home_status_service_not_running">%1$s 没有运行</string>
     <string name="home_root_button_start">启动</string>
     <string name="home_root_button_restart">重新启动</string>
