--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -5,7 +5,7 @@
     <string name="permission_description">允許應用程式以更高許可權使用系統 API。</string>
     <string name="home_status_service_is_running">%1$s 正在執行</string>
     <string name="home_status_service_version">版本 %2$d，%1$s</string>
-    <string name="home_status_service_version_update">版本 %2$d，%1$s\n再次啟動來升級到版本 %3$d</string>
+    <string name="home_status_service_version_update"><![CDATA[版本 %2$d，%1$s<br>再次啟動來升級到版本 %3$d]]></string>
     <string name="home_status_service_not_running">%1$s 沒有執行</string>
     <string name="home_root_button_start">啟動</string>
     <string name="home_root_button_restart">重新啟動</string>
